2003/12/03 17:37 (-0500) rwmcfa1

	* xs/(bunch).xs: s/=(arg|signature)/=for $1/

2003/12/02 00:46 (-0500) muppetman

	* xs/GdkEvent.xs, xs/GdkPixmap.xs, xs/GtkObject.xs: doc

2003/12/01 23:25 (-0500) rwmcfa1

	* xs/GdkDnd.xs xs/GdkProperty.xs, xs/GtkClipboard.xs, xs/GtkDnd.xs,
	xs/GtkListStore.xs, xs/GtkSelection.xs, xs/GtkTextBuffer.xs,
	xs/GtkTreeDnd.xs, xs/GtkTreeStore.xs, xs/GtkTreeView.xs,
	xs/GtkTreeViewColumn.xs: api doc additions.


2003/11/29 16:51 (-0500) muppetman

	* t/ignore_keyboard.pl: merge test helper script from head
	* Gtk2.pm, README: bump to 1.013
	* Makefile.PL: require Glib 1.013

2003/11/29 12:21 (-0500) muppetman

	* xs/GtkMessageDialog.xs: gtk_message_dialog_new uses printf-like
	semantics and does not offer a safe literal version.  pass the message
	through "%s" to be safe, and allow Gtk2::MessageDialog->new to take
	printf-like arguments to be nice.

2003/11/29 11:23 (-0500) rwmcfa1

	* MANIFEST: missing files added

	* t/ignore_keyboard.pl: initial import

	* t/*.t: use the new ignore_keyboard.pl stuff so that tests won't fail
	if you accidentally type while they're going on.

2003/11/29 11:23 (-0500) muppetman

	* MANIFEST
	A examples/inline-images.pl: new example

	* xs/GdkPixbuf.xs: lots of pod for various hard-to-use functions.
	removed unnecessary length() parameter from new_from_inline(), which
	will break any code that was using it, but it's really hard to use
	as it is so i can't imagine anyone's using it.  if you are, i
	apologize.

2003/11/28 21:57 (-0500) muppetman

	* xs/GtkRc.xs: SV * class isn't needed

2003/11/28 14:54 (-0500) rwmcfa1

	* Makefile.PL: DOC_PL_DEPENDS -> POD_DEPENDS

2003/11/28 12:44 (-0500) rwmcfa1

	* Gtk2.pm: fixed bug in cleanpath code, spotty by kaffee
 
	* Makefile.PL: when running podifystockitems.pl include blib path for 
	Gtk2, it may not be installed yet.
	
	* xs/Gdk.xs: doc ^ and gdk_threads -> gdk_threads_init

	* xs/GdkColor.xs, xs/GdkDnd.xs, xs/GdkDrawable.xs, xs/GdkGC.xs,