@@ -125,11 +125,10 @@ gtk_clipboard_get_display (clipboard)
 
 ####  gboolean gtk_clipboard_set_with_data (GtkClipboard *clipboard, const GtkTargetEntry *targets, guint n_targets, GtkClipboardGetFunc get_func, GtkClipboardClearFunc clear_func, gpointer user_data) 
 =for apidoc
-=for arg target1 (Gtk2::TargetEntry) the first target entry
-=for arg ... (__hide__)
+=for arg ... of Gtk2::TargetEntry's
 =cut
 gboolean
-gtk_clipboard_set_with_data (clipboard, get_func, clear_func, user_data, target1, ...)
+gtk_clipboard_set_with_data (clipboard, get_func, clear_func, user_data, ...)
 	GtkClipboard *clipboard
 	SV * get_func
 	SV * clear_func
@@ -195,11 +194,10 @@ gtk_clipboard_set_with_data (clipboard, get_func, clear_func, user_data, target1
 
 ##  gboolean gtk_clipboard_set_with_owner (GtkClipboard *clipboard, const GtkTargetEntry *targets, guint n_targets, GtkClipboardGetFunc get_func, GtkClipboardClearFunc clear_func, GObject *owner) 
 =for apidoc
-=for arg target1 (Gtk2::TargetEntry) the first target entry
-=for arg ... (__hide__)
+=for arg ... of Gtk2::TargetEntry's
 =cut
 gboolean
-gtk_clipboard_set_with_owner (clipboard, get_func, clear_func, owner, target1, ...)
+gtk_clipboard_set_with_owner (clipboard, get_func, clear_func, owner, ...)
 	GtkClipboard *clipboard
 	SV * get_func
 	SV * clear_func
