@@ -115,11 +115,10 @@ gtk_drag_unhighlight (widget)
 
 ####  void gtk_drag_dest_set (GtkWidget *widget, GtkDestDefaults flags, const GtkTargetEntry *targets, gint n_targets, GdkDragAction actions) 
 =for apidoc
-=for arg target1 (Gtk2::TargetEntry) the first target
-=for arg ... (__hide__)
+=for arg ... of Gtk2::TargetEntry's
 =cut
 void
-gtk_drag_dest_set (widget, flags, actions, target1, ...)
+gtk_drag_dest_set (widget, flags, actions, ...)
 	GtkWidget *widget
 	GtkDestDefaults flags
 	GdkDragAction actions
@@ -170,8 +169,7 @@ gtk_drag_dest_set_target_list (widget, target_list)
 
 ####  void gtk_drag_source_set (GtkWidget *widget, GdkModifierType start_button_mask, const GtkTargetEntry *targets, gint n_targets, GdkDragAction actions) 
 =for apidoc
-=for arg target1 (Gtk2::TargetEntry) the first target
-=for arg ... (__hide__)
+=for arg ... of Gtk2::TargetEntry's
 =cut
 void
 gtk_drag_source_set (widget, start_button_mask, actions, target1, ...)
