@@ -40,11 +40,10 @@ gtk_list_new (class)
 ## list soaks up the rest of the arg stack
 ##  void gtk_list_insert_items (GtkList *list, GList *items, gint position) 
 =for apidoc
-=for arg list_item (Gtk2::ListItem) the first list item to insert
-=for arg ... (__hide__)
+=for arg ... of Gtk2::ListItem's to be inserted
 =cut
 void
-gtk_list_insert_items (list, position, list_item, ...)
+gtk_list_insert_items (list, position, ...)
 	GtkList       * list
 	gint            position
     PREINIT:
@@ -61,11 +60,10 @@ gtk_list_insert_items (list, position, list_item, ...)
 
 ##  void gtk_list_append_items (GtkList *list, GList *items) 
 =for apidoc
-=for arg list_item (Gtk2::ListItem) the first list item to append
-=for arg ... (__hide__)
+=for arg ... of Gtk2::ListItem's to be appended
 =cut
 void
-gtk_list_append_items (list, list_item, ...)
+gtk_list_append_items (list, ...)
 	GtkList       * list
     PREINIT:
 	GList * list_items = NULL;
@@ -81,11 +79,11 @@ gtk_list_append_items (list, list_item, ...)
 
 ##  void gtk_list_prepend_items (GtkList *list, GList *items) 
 =for apidoc
-=for arg list_item (Gtk2::ListItem) the first list item to prepend
-=for arg ... (__hide__)
+=for arg list_item 
+=for arg ... of Gtk2::ListItem's to be prepended
 =cut
 void
-gtk_list_prepend_items (list, list_item, ...)
+gtk_list_prepend_items (list, ...)
 	GtkList       * list
     PREINIT:
 	GList * list_items = NULL;
@@ -101,11 +99,11 @@ gtk_list_prepend_items (list, list_item, ...)
 
 ##  void gtk_list_remove_items (GtkList *list, GList *items) 
 =for apidoc
-=for arg list_item (Gtk2::ListItem) the first list item to remove
-=for arg ... (__hide__)
+=for arg list_item 
+=for arg ... of Gtk2::ListItem's to be removed
 =cut
 void
-gtk_list_remove_items (list, list_item, ...)
+gtk_list_remove_items (list, ...)
 	GtkList       * list
     PREINIT:
 	GList * list_items = NULL;
