@@ -37,8 +37,8 @@ gtk_rc_add_default_file (class, filename)
 ## void gtk_rc_set_default_files (gchar **filenames)
 =for apidoc
 =for signature Gtk2::Rc->set_default_files (file1, ...)
-=for arg file1 (string) The first rc file to be read
-=for arg ... (__hide__)
+=for arg file1 
+=for arg ... of strings, the rc files to be parsed
 Sets the list of files that GTK+ will read at the end of Gtk2->init.
 =cut
 void
