@@ -110,11 +110,10 @@ DESTROY (SV * list)
 
 ##  GtkTargetList *gtk_target_list_new (const GtkTargetEntry *targets, guint ntargets) 
 =for apidoc
-=for arg target1 (Gtk2::TargetEntry) the first target
-=for arg ... (__hide__)
+=for arg ... of Gtk2::TargetEntry's
 =cut
 GtkTargetList *
-gtk_target_list_new (class, target1, ...)
+gtk_target_list_new (class, ...)
     PREINIT:
 	GtkTargetEntry *targets;
 	guint ntargets;
@@ -141,11 +140,10 @@ gtk_target_list_add (list, target, flags, info)
 
 ##  void gtk_target_list_add_table (GtkTargetList *list, const GtkTargetEntry *targets, guint ntargets) 
 =for apidoc
-=for arg target1 (Gtk2::TargetEntry) the first target
-=for arg ... (__hide__)
+=for arg ... of Gtk2::TargetEntry's
 =cut
 void
-gtk_target_list_add_table (GtkTargetList * list, target1, ...)
+gtk_target_list_add_table (GtkTargetList * list, ...)
     PREINIT:
 	GtkTargetEntry *targets;
 	guint ntargets;
@@ -210,11 +208,10 @@ gtk_selection_add_target (widget, selection, target, info)
 
 ##  void gtk_selection_add_targets (GtkWidget *widget, GdkAtom selection, const GtkTargetEntry *targets, guint ntargets) 
 =for apidoc
-=for arg target1 (Gtk2::TargetEntry) the first target
-=for arg ... (__hide__)
+=for arg ... of Gtk2::TargetEntry's
 =cut
 void
-gtk_selection_add_targets (widget, selection, target1, ...)
+gtk_selection_add_targets (widget, selection, ...)
 	GtkWidget *widget
 	GdkAtom selection
     PREINIT:
