@@ -1,3 +1,10 @@
+2003/12/03 19:16 (-0500) rwmcfa1
+
+	* xs/(bunch).xs: ... (list) comments corrected
+
+	* xs/GtkTreeDnd.xs: ^ and fixed bug in api of 
+	gtk_tree_drag_source_drag_data_get, selection_data is an out param.
+
 2003/12/03 17:37 (-0500) rwmcfa1
 
 	* xs/(bunch).xs: s/=(arg|signature)/=for $1/
